# panman

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  README.md  panman.example.toml
.cargo/: config.toml
boards/crowpanel-p4-10/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
boards/crowpanel-p4-10/src/: main.rs  ota_esp.rs  wifi.rs
crates/panman-client/: Cargo.toml
crates/panman-client/src/: cache.rs  lib.rs  rest.rs  ws.rs
crates/panman-core/: Cargo.toml
crates/panman-core/src/: config.rs  error.rs  lib.rs  types.rs  widget.rs
crates/panman-hal/: Cargo.toml
crates/panman-hal/src/: board.rs  lib.rs
crates/panman-hal/src/boards/: crowpanel_p4_10.rs  mod.rs
crates/panman-ota/: Cargo.toml
crates/panman-ota/src/: checker.rs  lib.rs  rollback.rs  updater.rs
crates/panman-ui/: Cargo.toml
crates/panman-ui/src/: lib.rs  screen.rs
crates/panman-ui/src/screens/: dashboard.rs  device.rs  mod.rs  settings.rs
crates/panman-ui/src/widgets/: mod.rs  sensor.rs  slider.rs  status.rs  thermostat.rs  toggle.rs
