[package]
name = "panman-crowpanel-p4-10"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Panman firmware for CrowPanel Advanced 10.1\" ESP32-P4"

[[bin]]
name = "panman-crowpanel-p4-10"
path = "src/main.rs"

[dependencies]
panman-core = { workspace = true }
panman-client = { workspace = true }
panman-ui = { workspace = true }
panman-ota = { workspace = true }
panman-hal = { workspace = true, features = ["crowpanel-p4-10"] }
log = { workspace = true }

# ESP-IDF sys crate — provides entry point (binstart) and C FFI bindings.
# esp-idf-hal and esp-idf-svc are not included yet: the git master branches
# have inter-crate compatibility issues for ESP32-P4 (WiFi-via-companion,
# modem peripheral restructure). Will add when crates.io releases catch up.
# Our code uses platform-agnostic traits; actual ESP-IDF calls will go
# through esp-idf-sys directly.
[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.36", features = ["binstart"] }

# Native build dependencies for development/testing on host
[target.'cfg(not(target_os = "espidf"))'.dependencies]
env_logger = "0.11"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.4"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]
