[package]
name = "panman-crowpanel-p4-10"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Panman firmware for CrowPanel Advanced 10.1\" ESP32-P4"

[[bin]]
name = "panman-crowpanel-p4-10"
path = "src/main.rs"

[dependencies]
panman-core = { workspace = true }
panman-client = { workspace = true }
panman-ui = { workspace = true }
panman-ota = { workspace = true }
panman-hal = { workspace = true, features = ["crowpanel-p4-10"] }
log = { workspace = true }

# ESP-IDF sys crate — provides entry point (binstart) and C FFI bindings.
# The esp_hosted and esp_wifi_remote components handle WiFi via the
# ESP32-C6 companion chip over SDIO.
[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.36", features = ["binstart"] }

# Native build dependencies for development/testing on host
[target.'cfg(not(target_os = "espidf"))'.dependencies]
env_logger = "0.11"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.4"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]

# Extra IDF components for WiFi via ESP32-C6 companion chip.
# esp_wifi_remote provides the esp_wifi_* API implementations,
# esp_hosted provides the SDIO transport to the companion.
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_wifi_remote", version = "~0.16" }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_hosted", version = "~2.3" }
