[package]
name = "panman-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "zman REST + WebSocket client for panman"

[dependencies]
panman-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
