[package]
name = "panman-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, config, and widget model for panman"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
